[UPD] Creazione e completamento Tabella

--- a/index.html
+++ b/index.html
@@ -11,6 +11,53 @@
     <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="landscape part 1">
     <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="landscape part 2">
     <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="landscape part 3">
+    <!--Titolo e foto-->
+    <hr>
+    <h2>Le mie spese</h2>
+    <table>
+        <!--intestatzione tabella-->
+        <thead>
+            <tr>
+                <th>Numero</th>
+                <th>Descrizione</th>
+                <th>Costo</th>
+            </tr>
+        </thead>
+        <!--intestatzione tabella-->
+
+        <!--corpo della tabella-->
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Biglietto aereo</td>
+                <td>120&euro;</td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Biglietto aereo</td>
+                <td>120&euro;</td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Biglietto aereo</td>
+                <td>120&euro;</td>
+            </tr>
+        </tbody>
+        <!--corpo della tabella-->
+
+        <!--chiusura tabella-->
+        <tfoot>
+            <tr>
+                <td colspan=2>Totale</td>
+                <td>360&euro;</td>
+            </tr>
+        </tfoot>
+        <!--chiusura tabella-->
+    </table>
     <hr>
 </body>
 </html>
