--- a/index.html
+++ b/index.html
@@ -59,5 +59,15 @@
         <!--chiusura tabella-->
     </table>
     <hr>
+    <!--lista cose da fare-->
+    <h3>Cose da fare</h3>
+    <ul>
+        <li>Visitare la Tower of London &#10003;</li> 
+        <li>Visitare greenwich &#10007;</li>
+        <li>Ascoltare un artista di strada a Covent Garden &#10007;</li>
+        <li>Mangiare il tipico Fish and Chips inglese &#10003;</li>
+    </ul>
+    <!--lista cose da fare-->
+    <hr>
 </body>
 </html>
